--- a/index.html
+++ b/index.html
@@ -52,12 +52,26 @@
             </p>
             <p class="tech-stack">
               Technology Stack
-              <i class="fa-brands fa-html5"></i>
-              <i class="fa-brands fa-css3-alt"></i>
-              <i class="fa-brands fa-sass"></i>
-              <i class="fa-brands fa-square-js"></i>
-              <i class="fa-brands fa-python"></i>
-              <i class="fa-brands fa-php"></i>
+            </p>
+            <p class="tech-stack">
+              <a href="https://fr.wikipedia.org/wiki/HTML5" target="_blank">
+                <i class="fa-brands fa-html5"></i>
+              </a>
+              <a href="https://fr.m.wikipedia.org/wiki/Feuilles_de_style_en_cascade" target="_blank">
+                <i class="fa-brands fa-css3-alt"></i>
+              </a>
+              <a href="https://fr.wikipedia.org/wiki/Sass_(langage)" target="_blank">
+                <i class="fa-brands fa-sass"></i>
+              </a>
+              <a href="https://fr.wikipedia.org/wiki/JavaScript" target="_blank">
+                <i class="fa-brands fa-square-js"></i>
+              </a>
+              <a href="https://fr.wikipedia.org/wiki/Python_(langage)" target="_blank">
+                <i class="fa-brands fa-python"></i>
+              </a>
+              <a href="https://fr.wikipedia.org/wiki/PHP" target="_blank">
+                <i class="fa-brands fa-php"></i>
+              </a>
             </p>
           </div>
           <div class="testimonials-elem-profil">
@@ -96,8 +110,8 @@
     <h3>Each project is focused on one programming language</h3>
   </div>
   <div class="testimonials-elem-text mt40">
+    <h2>Mon CV</h2>
     <h2>
-      Mon CV
       <i class="fa-brands fa-html5"></i>
       <i class="fa-brands fa-css3-alt"></i>
       <i class="fa-brands fa-sass"></i>
@@ -117,8 +131,8 @@
       <div class="testimonials-content">
         <div class="testimonials-elem">
           <div class="testimonials-elem-text">
+            <h2>Agence immobilière</h2>
             <h2>
-              Agence immobilière
               <i class="fa-brands fa-html5"></i>
               <i class="fa-brands fa-css3-alt"></i>
               <i class="fa-brands fa-square-js"></i>
@@ -161,8 +175,8 @@
             <p>Blog</p>
           </div>
           <div class="testimonials-elem-text">
+            <h2>Blog</h2>
             <h2>
-              Blog
               <i class="fa-brands fa-html5"></i>
               <i class="fa-brands fa-css3-alt"></i>
             </h2>
@@ -195,8 +209,8 @@
       <div class="testimonials-content">
         <div class="testimonials-elem">
           <div class="testimonials-elem-text">
+            <h2>Café</h2>
             <h2>
-              Café
               <i class="fa-brands fa-html5"></i>
               <i class="fa-brands fa-css3-alt"></i>
             </h2>
@@ -236,8 +250,8 @@
             <p>Application Météo</p>
           </div>
           <div class="testimonials-elem-text">
+            <h2>Application Météo</h2>
             <h2>
-              Application Météo
               <i class="fa-brands fa-html5"></i>
               <i class="fa-brands fa-css3-alt"></i>
               <i class="fa-brands fa-square-js"></i>
@@ -271,8 +285,8 @@
       <div class="testimonials-content">
         <div class="testimonials-elem">
           <div class="testimonials-elem-text">
+            <h2>Mini Jeux</h2>
             <h2>
-              Mini Jeux
               <i class="fa-brands fa-html5"></i>
               <i class="fa-brands fa-css3-alt"></i>
               <i class="fa-brands fa-square-js"></i>
@@ -314,7 +328,7 @@
     </button>    
   </section>
   <footer>
-    <p class="center">Copyright made by Thomas</p>
+    <p class="center">&#9400; made by Thomas</p>
   </footer>
 </body>
 </html>
