--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
             <p>
               <i class="fas fa-quote-left"></i>
               Cette page affiche 3 mini-jeux codés entièrement en javascript à-partir de canvas. Le CSS est très basique puisque l'objectif
-              était de manipulé du Javascript dans ce projet. Pour des raisons que j'ignore encore, certaines fonctionnalités de Js ne fonctionne
-              pas sur ios.
+              était de manipulé du Javascript dans ce projet. Pour des raisons que j'ignore encore, certaines fonctionnalités de Js ne 
+              fonctionnent pas sur ios.
               <i class="fas fa-quote-right"></i>
             </p>
             <p class="logo">
