--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1>Front-End Developper</h1>
             <p>
               <i class="fas fa-quote-left"></i>
-              Salut ! Je suis Thomas et je suis passioné de développement Front-End et d'informatique en tout genre. Je me propose de 
+              Salut ! Je m'appelle Thomas et je suis passioné de développement Front-End et d'informatique en tout genre. Je me propose de 
               réaliser votre site vitrine !
               <i class="fas fa-quote-right"></i>
             </p>
