--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
       </div>
   </section>
   <div id="Project" class="container">
-    <h2>All of my projects</h2>
-    <h3>Each project is focused on one programming language</h3>
+    <h2 class="ml20">All of my projects</h2>
+    <h3 class="ml20">Each project is focused on one programming language</h3>
   </div>
   <div class="testimonials-elem-text mt40">
     <h2>Mon CV</h2>
@@ -147,7 +147,7 @@
               <i class="fas fa-quote-right"></i>
             </p>
             <p class="logo">
-              <p>Code
+              <p class="verti">Code
                 <a href="https://github.com/thomas-barrais/projet-responsive" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
@@ -190,7 +190,7 @@
               <i class="fas fa-quote-right"></i>
             </p>
             <p class="logo">
-              <p>Code
+              <p class="verti">Code
                 <a href="https://github.com/thomas-barrais/medium" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
@@ -222,7 +222,7 @@
               <i class="fas fa-quote-right"></i>
             </p>
             <p class="logo">
-              <p>Code
+              <p class="verti">Code
                 <a href="https://github.com/thomas-barrais/cafe-solo" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
@@ -266,7 +266,7 @@
               <i class="fas fa-quote-right"></i>
             </p>
             <p class="logo">
-              <p>Code
+              <p class="verti">Code
                 <a href="https://github.com/thomas-barrais" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
@@ -299,7 +299,7 @@
               <i class="fas fa-quote-right"></i>
             </p>
             <p class="logo">
-              <p>Code
+              <p class="verti">Code
                 <a href="https://github.com/thomas-barrais/cafe-solo" target="_blank">
                   <i class="fa-brands fa-github"></i>
                 </a>
