--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </p>
           </div>
           <div class="testimonials-elem-profil">
-            <img src="thomas.jpg" alt="Thomas BARRAIS" />
+            <img src="thomas-cv.jpg" alt="Thomas BARRAIS" />
             <p>Thomas Barrais</p>
           </div>
         </div>
@@ -159,7 +159,9 @@
             </p>
           </div>
           <div class="testimonials-elem-project">
-            <img src="agence-thomas-barrais.jpeg" alt="Agence Immobilière"/>
+            <a href="https://agence-thomas-barrais.netlify.app/" target="_blank">
+              <img src="agence-thomas-barrais.jpeg" alt="Agence Immobilière"/>
+            </a>
             <p>Agence Immobilière</p>
           </div>
         </div>
@@ -171,7 +173,9 @@
       <div class="testimonials-content">
         <div class="testimonials-elem testimonials-elem-reverse">
           <div class="testimonials-elem-project">
-            <img src="blog-barrais.jpeg" alt="Blog" />
+            <a href="https://blog-barrais.netlify.app/" target="_blank">
+              <img src="blog-barrais.jpeg" alt="Blog" />
+            </a>
             <p>Blog</p>
           </div>
           <div class="testimonials-elem-text">
@@ -234,7 +238,9 @@
             </p>
           </div>
           <div class="testimonials-elem-project">
-            <img src="cafe-thomas-barrais.jpeg" alt="Café"/>
+            <a href="https://cafe-thomas-barrais.netlify.app/" target="_blank">
+              <img src="cafe-thomas-barrais.jpeg" alt="Café"/>
+            </a>
             <p>Café</p>
           </div>
         </div>
@@ -246,7 +252,9 @@
       <div class="testimonials-content">
         <div class="testimonials-elem testimonials-elem-reverse">
           <div class="testimonials-elem-project">
-            <img src="app-meteo-thomas.jpeg" alt="Application Météo" />
+            <a href="https://app-meteo-thomas.netlify.app/index.html" target="_blank">
+              <img src="app-meteo-thomas.jpeg" alt="Application Météo" />
+            </a>
             <p>Application Météo</p>
           </div>
           <div class="testimonials-elem-text">
@@ -311,7 +319,9 @@
             </p>
           </div>
           <div class="testimonials-elem-project">
-            <img src="mini-jeu-en-javascript-by-thomas.jpeg" alt="Mini Jeux"/>
+            <a href="https://mini-jeu-en-javascript-by-thomas.netlify.app/" target="_blank">
+              <img src="mini-jeu-en-javascript-by-thomas.jpeg" alt="Mini Jeux"/>
+            </a>
             <p>Mini Jeux</p>
           </div>
         </div>
